Fixed order amount string issue that caused error in the fingerprint hash used for DPM. Transactions now work successfuly and now I can start the order creation and receipt page. Some other small cosmetic changes too.

--- a/web/include/stylesheets/stylesheet.css
+++ b/web/include/stylesheets/stylesheet.css
@@ -1,4 +1,5 @@
 body {
+    background-color: #4e4e4e;
     background-image: url(/include/images/pattern-scales.png);
     background-repeat: repeat;
 }
