Added Order History servlet for customers

--- a/web/include/stylesheets/stylesheet.css
+++ b/web/include/stylesheets/stylesheet.css
@@ -16,3 +16,10 @@ body {
 .panel {
     max-width: 1200px;
 }
+
+.totalBox {
+    border-radius: 15px 15px 15px 15px;
+    -moz-border-radius: 15px 15px 15px 15px;
+    -webkit-border-radius: 15px 15px 15px 15px;
+    border: 3px ridge #60bf07;
+}
