--- a/web/include/stylesheets/stylesheet.css
+++ b/web/include/stylesheets/stylesheet.css
@@ -2,6 +2,7 @@ body {
     background-color: #4e4e4e;
     background-image: url(/include/images/pattern-scales.png);
     background-repeat: repeat;
+    background-attachment: fixed;
 }
 
 .center {
