--- a/web/include/stylesheets/stylesheet.css
+++ b/web/include/stylesheets/stylesheet.css
@@ -1,8 +1,13 @@
+
 body {
     background-color: #4e4e4e;
     background-image: url(/include/images/pattern-scales.png);
     background-repeat: repeat;
     background-attachment: fixed;
+}
+
+.navbar-fixed-top, .navbar-fixed-bottom {
+    position: relative;
 }
 
 .center {
